# Minecraft-Clone

./: README.md
Minecraft_Clone/: CMakeLists.txt  Minecraft_Clone.sln
Minecraft_Clone/Dependencies/GLEW_64/src/: glew.c
Minecraft_Clone/Dependencies/LibNoise/lib/: LibNoise64.idb  LibNoise64.lib
Minecraft_Clone/Dependencies/SFML-2.5.0/include/SFML/: Audio.hpp  Graphics.hpp  System.hpp  Window.hpp
Minecraft_Clone/Dependencies/glm/test/cmake/: CMakeLists.txt
Minecraft_Clone/GPUCache/: data_1  index
Minecraft_Clone/Minecraft_Clone/: CMakeLists.txt  Minecraft_Clone.vcxproj  Minecraft_Clone.vcxproj.filters
Minecraft_Clone/Minecraft_Clone/Res/Blocks/CommonSolid/: Glowstone.block
Minecraft_Clone/Minecraft_Clone/Res/Blocks/Misc/: GlowstoneDust.block
Minecraft_Clone/Minecraft_Clone/Res/Blocks/Plants/: DeadShrub.block  Fern.block  LargeFern.block  LargeFern1.block  LargeFern2.block  SugarCane.block  TallGrass.block
Minecraft_Clone/Minecraft_Clone/src/: Application.cpp  Context.h  RenderSettings.h  main.cpp
Minecraft_Clone/Minecraft_Clone/src/Audio/: AudioSet.h  SoundFunctions.cpp  SoundFunctions.h  SoundMaster.cpp  SoundMaster.h
Minecraft_Clone/Minecraft_Clone/src/Audio/Music/: Music.cpp  Music.h  MusicSet.h
Minecraft_Clone/Minecraft_Clone/src/Audio/Sound/: Sound.cpp  Sound.h  SoundSet.h
Minecraft_Clone/Minecraft_Clone/src/Crafting/: CraftRecipes.cpp  CraftRecipes.h  Crafting.h
Minecraft_Clone/Minecraft_Clone/src/Environment/: ProcSky.cpp  Rain.h  SkyManager.cpp  SkyManager.h  Snowfall.h  SnowfallMesh.h
Minecraft_Clone/Minecraft_Clone/src/GL/: GLFunctions.cpp
Minecraft_Clone/Minecraft_Clone/src/Input/: Keyboard.h  Mouse.h  ToggleKey.h
Minecraft_Clone/Minecraft_Clone/src/Inventory/: IconDatabase.h  IconsMesh.h  ItemSlot.h
Minecraft_Clone/Minecraft_Clone/src/Inventory/InventoryFunctions/: Inventory.cpp  InventoryConstructor.cpp  InventoryInterfaceUpdate.cpp  InventoryItemCalculations.cpp  InventoryMisc.cpp  InventoryMouseProcessing.cpp
Minecraft_Clone/Minecraft_Clone/src/Inventory/ItemIcons/: GrabbedItemDrawer.cpp  GrabbedItemDrawer.h  ItemIconsBuilder.cpp  ItemIconsBuilder.h
Minecraft_Clone/Minecraft_Clone/src/Inventory/PlayerParametersIcons/: ParametersBuilder.cpp  ParametersBuilder.h
Minecraft_Clone/Minecraft_Clone/src/Item/: ItemStack.h  Material.cpp  Material.h
Minecraft_Clone/Minecraft_Clone/src/Item/DroppedItem/: Coordinates.h  DroppedItem.cpp  DroppedItem.h  DroppedItemsBuilder.cpp  DroppedItemsBuilder.h  DroppedItemsManager.cpp  DroppedItemsManager.h  DroppedItemsMesh.h
Minecraft_Clone/Minecraft_Clone/src/Maths/: Matrix.cpp  Matrix.h  Vector2XZ.h  glm.h
Minecraft_Clone/Minecraft_Clone/src/Player/: BlockBreaker.h  Player.cpp  Player.h  PlayerInfo.h
Minecraft_Clone/Minecraft_Clone/src/Player/Calculations/: CameraShaking.h  DamageMaster.h  MovementFOV.cpp  MovementFOV.h  SneakingCamera.h
Minecraft_Clone/Minecraft_Clone/src/Player/PlayerHand/: Hand.cpp  Hand.h  HandAnimationData.h  HandMesh.h
Minecraft_Clone/Minecraft_Clone/src/PostProcess/: Framebuffer.h  PostProcessRenderer.cpp  PostProcessRenderer.h
Minecraft_Clone/Minecraft_Clone/src/Renderer/: ChunkRenderer.cpp  DroppedItemsRenderer.cpp  DroppedItemsRenderer.h  FloraRenderer.h  HandRenderer.cpp  HandRenderer.h  RenderMaster.cpp  RenderMaster.h  Renderer_2D.cpp  Renderer_2D.h  SFMLRenderer.cpp  SFMLRenderer.h  WaterRenderer.h
Minecraft_Clone/Minecraft_Clone/src/Renderer/AimedBlock/: BreakBlockRenderer.cpp  BreakBlockRenderer.h  DelineateBlockRenderer.cpp  DelineateBlockRenderer.h
Minecraft_Clone/Minecraft_Clone/src/Shaders/: DroppedItemShader.cpp  HandShader.cpp  ShaderLoader.cpp  WaterShader.cpp
Minecraft_Clone/Minecraft_Clone/src/States/: PlayingState.cpp  PlayingState.h  StateBase.h
Minecraft_Clone/Minecraft_Clone/src/Texture/: BasicTexture.cpp  BasicTexture.h  TextureAtlas.cpp  TextureAtlas.h
Minecraft_Clone/Minecraft_Clone/src/Tick/: TickManager.cpp
Minecraft_Clone/Minecraft_Clone/src/UserSettings/: Config.cpp
Minecraft_Clone/Minecraft_Clone/src/Util/: FPSCounter.cpp  FPSCounter.h  Random.h
Minecraft_Clone/Minecraft_Clone/src/World/Block/: BlockData.h  BlockDatabase.cpp  BlockDatabase.h  BlockId.h
Minecraft_Clone/Minecraft_Clone/src/World/Chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkSection.h  UnloadedBlock.h
Minecraft_Clone/Minecraft_Clone/src/World/Event/: PlayerDigEvent.cpp  PlayerDigEvent.h
Minecraft_Clone/Minecraft_Clone/src/World/Generation/: Seed.cpp
Minecraft_Clone/Minecraft_Clone/src/World/World/: World.cpp  World.h  WorldGeneration.cpp
(+113 files in other folders)
